Make sure the menu is always on top on other content by adding z-index.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,6 +28,7 @@
 .site-nav {
     float: right;
     line-height: 56px;
+    z-index: 1000;
 
     .menu-icon {
         display: none;
